[gd_scene load_steps=5 format=3 uid="uid://bt2cv4mou8vx"]

[ext_resource type="Script" path="res://editor/room_node.gd" id="1_stwqi"]
[ext_resource type="Texture2D" uid="uid://ycj5gbxt816c" path="res://assets/room_node.svg" id="2_6hxpb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_guu6w"]
bg_color = Color(0, 0, 0, 0.498039)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8dlog"]

[node name="RoomNode" type="Node2D" groups=["room_node"]]
script = ExtResource("1_stwqi")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0, 0.584314, 1, 1)
polygon = PackedVector2Array(-6, -6, 6, -6, 6, 6, -6, 6)

[node name="PolygonInner" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[node name="ExitIndicator" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_6hxpb")

[node name="Context" type="Node2D" parent="."]
position = Vector2(-6, 8)

[node name="NameLabel" type="Label" parent="Context"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_styles/normal = SubResource("StyleBoxFlat_guu6w")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_8dlog")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
